Home page changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ml-5">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Profile</a>
@@ -87,6 +87,40 @@
             </a>
           </div>
     </div>
+    <section class="category mt-3">
+      <div class="container">
+        <h3 class="my-5">BLOG CATEGORY</h3>
+        <div class="row">
+          <div class="card ml-5 p-2" style="width: 20rem; height: 30rem;">
+            <img src="bimg/travel.jpg" class="card-img-top" alt="..." height="45%">
+            <div class="card-body">
+              <h5 class="card-title text-warning">Travelling</h5>
+              <p class="card-text">Traveling has an appeal of its own. It is the gusto of exploring new destinations, discovering unique cultures, and celebrating life on the road.</p>
+              <a href="#" class="btn btn-warning">Know more...</a>
+            </div>
+          </div>
+          <div class="card ml-5 p-2" style="width: 20rem; height: 30rem;">
+            <img src="bimg/diet.jpeg" class="card-img-top" alt="..." height="46%">
+            <div class="card-body">
+              <h5 class="card-title text-warning">Diet</h5>
+              <p class="card-text">Food may be essential as fuel for body but good food is fuel for the soul. Find some amazing diet receipes...</p>
+              <a href="#" class="btn btn-warning">Know more...</a>
+            </div>
+          </div>
+          <div class="card ml-5 p-2" style="width: 20rem; height: 30rem;">
+            <img src="bimg/tech.jpg" class="card-img-top" alt="..." height="46%">
+            <div class="card-body">
+              <h5 class="card-title text-warning">Technology</h5>
+              <p class="card-text">Here are some of the most trusted posts, these will help you keep up with the constant flow of technological updates.</p>
+              <a href="#" class="btn btn-warning">Know more...</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p> ©2022 BLOGZONE. All Rights Reserved.</p>
+    </footer>
     
 </body>
 </html>
