--- a/profile.html
+++ b/profile.html
@@ -48,7 +48,7 @@
                     <a class="nav-link" href="#">Blogs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="createBlog.html">Create a Blog</a>
+                    <a class="nav-link" href="#">Create a Blog</a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
